tests/ui/async-await/dyn/mut-is-pointer-like.stderr
warning: the feature `async_fn_in_dyn_trait` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/mut-is-pointer-like.rs:6:12
   |
LL | #![feature(async_fn_in_dyn_trait)]
   |            ^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #133119 <https://github.com/rust-lang/rust/issues/133119> for more information
   = note: `#[warn(incomplete_features)]` on by default

error[E0038]: the trait `AsyncTrait` is not dyn compatible
  --> $DIR/mut-is-pointer-like.rs:35:29
   |
LL |         let x: Pin<&mut dyn AsyncTrait<Output = ()>> = f;
   |                             ^^^^^^^^^^^^^^^^^^^^^^^ `AsyncTrait` is not dyn compatible
   |
note: for a trait to be dyn compatible it needs to allow building a vtable
      for more information, visit <https://doc.rust-lang.org/reference/items/traits.html#dyn-compatibility>
  --> $DIR/mut-is-pointer-like.rs:16:14
   |
LL | trait AsyncTrait {
   |       ---------- this trait is not dyn compatible...
...
LL |     async fn async_dispatch(self: Pin<&mut Self>) -> Self::Output;
   |              ^^^^^^^^^^^^^^ ...because method `async_dispatch` is `async`
   = help: consider moving `async_dispatch` to another trait

error: aborting due to 1 previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0038`.
